fabrique-derive/tests/ui/derive_on_union.stderr
error: Factory can only be derived from named structs, union given
 --> tests/ui/derive_on_union.rs:4:1
  |
4 | / union Anvil {
5 | |     heavy: u32,
6 | |     light: u16,
7 | | }
  | |_^
